# ascii-paint

./: CMakeLists.txt  README.org  app.cpp  app.h  app_data.cpp  app_gui.cpp  app_gui.h  ascii-paint.cfg  ascii-paint.cfg.bak  brush.h  cell_operation.cpp  color_box.cpp  fill_operation.cpp  fov_operation.cpp  get_string_message_box.cpp  import_operation.cpp  line_operation.cpp  oval_operation.cpp  oval_operation.h  path_operation.cpp  pick_operation.cpp  rect_operation.cpp  rect_operation.h  text_operation.cpp
include/gui/: widget.hpp
manual/: .directory
txt2asc/: adom.asc  adom.txt  output.asc
